--- a/etc/ipsec.conf
+++ b/etc/ipsec.conf
@@ -1,27 +1,23 @@
 # /etc/ipsec.conf - strongSwan IPsec configuration file
 #
 # Based on http://www.strongswan.org/uml/testresults/ikev2/rw-psk-ipv4/
-
+# basic configuration
 config setup
+    strictcrlpolicy=no
+    uniqueids = no
 
-conn %default
-    left=%defaultroute
-    ikelifetime=60m
-    keylife=20m
-    rekeymargin=3m
-    keyingtries=1
+# IKEv2 for iOS
+conn iOS-IKEV2
+    auto=add
+    dpdaction=clear
     keyexchange=ikev2
-    authby=secret
-    leftid=username
-    leftauth=eap-mschapv2
-    eap_identity=%identity
-
-conn rw
-    # http://wiki.loopop.net/doku.php?id=server:vpn:strongswanonopenvz
-    # https://wiki.strongswan.org/projects/strongswan/wiki/ForwardingAndSplitTunneling
+    #left
+    left=%any
     leftsubnet=0.0.0.0/0,::/0
-    # end ref
-    leftfirewall=yes
+    leftauth=eap-mschapv2
+    leftid=username
+    #right
     right=%any
     rightsourceip=10.8.0.0/16,fd6a:6ce3:c8d8:7caa::/64
-    auto=add
+    rightauth=eap-mschapv2
+    rightid=username
