--- a/etc/ipsec.conf
+++ b/etc/ipsec.conf
@@ -1,22 +1,53 @@
-# /etc/ipsec.conf - strongSwan IPsec configuration file
-#
-# Based on http://www.strongswan.org/uml/testresults/ikev2/rw-psk-ipv4/
-# basic configuration
 config setup
-    strictcrlpolicy=no
-    uniqueids = no
 
-# IKEv2 for iOS
-conn iOS-IKEV2
-    auto=add
+    #  Allows few simultaneous connections with one user account.
+    #  By default only one active connection per user allowed.
+    #  This option also usefull if you have limited rightsourceip pool and want to kick your ghost connection while reconnecting.
+    uniqueids=no
+
+    # Increase debug level
+    # charondebug = ike 3, cfg 3
+
+conn %default
+
+    # Most universal cypher list for all platforms
+    # Comment this line if connection fails
+    ike=aes256-sha256-modp1024,aes256-sha256-modp2048
+
+    # Dead peer detection will ping clients and terminate sessions after timeout
     dpdaction=clear
+    dpddelay=35s
+    dpdtimeout=2000s
+
     keyexchange=ikev2
-    #left
-    left=%any
+    auto=add
+    rekey=no
+    reauth=no
+    fragmentation=yes
+    #compress=yes
+
+    # left - local (server) side
+    leftcert=cert.pem # Filename of certificate located at /etc/ipsec.d/certs/
+    leftsendcert=always
+    # Routes pushed to clients. If you don't have ipv6 then remove ::/0
     leftsubnet=0.0.0.0/0,::/0
-    leftid=username
-    #right
-    right=%any
-    rightsourceip=10.8.0.0/16,fd6a:6ce3:c8d8:7caa::/64
+
+    # right - remote (client) side
+    eap_identity=%identity
+    # ipv4 and ipv6 subnets that assigns to clients. If you don't have ipv6 then remove it
+    rightsourceip=10.1.1.0/24,2a00:1450:400c:c05::/112
+    rightdns=8.8.8.8,2001:4860:4860::8888
+
+
+# Apple clients usually goes here
+conn ikev2-mschapv2-apple
     rightauth=eap-mschapv2
-    rightid=username
+    leftid=tunnel.zhovner.com
+
+# If you need assign static IP to some clients for example for port forwarding
+# it can be matched by specific rightid
+# conn static-ip-for-putin
+#   also="ikev2-mschapv2-apple"
+#   rightid=putin
+#   rightsourceip=10.1.1.99,2a00:1450:400c:c05::1337
+#   rightdns=8.8.8.8,2001:4860:4860::8888
